--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
+build/
+
+###/wrapper/gradle-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -16,11 +17,7 @@
 *.iml
 *.ipr
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+#local
 ignored
+
+
