--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+        maven { url 'http://oss.sonatype.org/content/repositories/snapshots/' }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 	}
 	dependencies {
         classpath('org.codehaus.groovy:groovy-all:2.4.7')
@@ -12,9 +16,9 @@ buildscript {
 }
 
 apply plugin: 'groovy'
-//apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
+//apply plugin: 'info.solidsoft.pitest'
 
 jar {
 	baseName = 'RangeMap'
@@ -46,4 +50,5 @@ dependencies {
     testCompile('org.assertj:assertj-core:3.6.2')
 	testCompile "com.github.tomakehurst:wiremock-standalone:2.5.1"
 	testRuntime "cglib:cglib-nodep:3.2.4"
+//    classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.11'
 }
