javascript plus  some fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 GoogleMapsApi.apiHost=http://localhost:8090
 logging.level.*=warn
+GoogleMapsApi.apiKey=AIzaSyDqlKJYUGHIyx4Fi_JvmpWWwoUPS7Zpm5M
+GoogleMapsApi.apiHost=https://maps.googleapis.com
+server.port=8080
