--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        springBootVersion = '1.5.1.RELEASE'
-    }
     repositories {
         mavenCentral()
         maven { url 'http://oss.sonatype.org/content/repositories/snapshots/' }
@@ -11,12 +8,10 @@ buildscript {
     }
     dependencies {
         classpath('org.codehaus.groovy:groovy-all:2.4.7')
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'groovy'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
 //apply plugin: 'info.solidsoft.pitest'
 
@@ -25,8 +20,6 @@ jar {
     version = '0.0.1-SNAPSHOT'
 }
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
@@ -34,22 +27,20 @@ repositories {
 
 dependencies {
     compile(
-            'org.springframework.boot:spring-boot-starter-actuator',
-            'org.springframework.boot:spring-boot-actuator-docs',
-            'org.springframework.boot:spring-boot-starter-web',
             'org.codehaus.groovy:groovy-all:2.4.7',
             'com.google.guava:guava:21.0',
             'com.jayway.jsonpath:json-path:2.2.0',
             'com.amazonaws:aws-lambda-java-core:1.1.0',
             'com.amazonaws:aws-lambda-java-log4j:1.0.0',
+            'com.fasterxml.jackson.core:jackson-core:2.8.5',
+            'com.fasterxml.jackson.core:jackson-databind:2.8.5',
+            'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
     )
 
     testCompile(
             'junit:junit:4.12',
             'org.codehaus.groovy:groovy-all:2.4.4',
             'org.spockframework:spock-core:1.0-groovy-2.4',
-            'org.springframework.boot:spring-boot-starter-test',
-            'org.springframework.restdocs:spring-restdocs-mockmvc',
             'org.assertj:assertj-core:3.6.2',
             'com.github.tomakehurst:wiremock-standalone:2.5.1',
             'cglib:cglib-nodep:3.2.4'
